CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

PROJECT(modules-playground LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_EXTENSIONS OFF)


add_executable(playground)
TARGET_SOURCES(playground PUBLIC main.cpp)
TARGET_SOURCES(playground PUBLIC
    FILE_SET playground_modules
    TYPE CXX_MODULES
    FILES
        playground.cppm)

